--- a/DesktopStylesIntellisense.csproj
+++ b/DesktopStylesIntellisense.csproj
@@ -51,7 +51,7 @@
     <Compile Include="PresenterControl.xaml.cs">
       <DependentUpon>PresenterControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="XAMLIntellisenseProvider.cs" />
+    <Compile Include="DesktopStylesIntellisenseProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,13 +84,16 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="Resources\icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
+  <Import Project="..\DesktopStylesIntellisenseShared\DesktopStylesIntellisenseShared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
